[package]
name = "chain-gang"
version = "0.1.0"
description = "This is a library that enables monitoring of multiple blockchains (BTC, BCH, BSV)."
# repository = "https://github.com/brentongunning/rust-sv"
# authors = ["Brenton Gunning <brentongunning@gmail.com>"]
# keywords = ["bitcoin", "sv", "cash", "crypto"]
# license = "MIT"
edition = "2021"

[dependencies]
byteorder = "1.2"
digest = "0.7"
dns-lookup = "1.0.8"
hex = "0.3"
linked-hash-map = "0.5"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
murmur3 = "0.4"
num-bigint = "0.2"
num-traits = "0.2"
rand = "0.5"
ring = "0.16.20"
ripemd160 = "0.7"
rust-base58 = "0.0"

secp256k1 = "0.12"
snowflake = "1.3"

# Used by the interface feature
serde = { version = "1.0", features =["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11.12", features = ["json"], optional = true }
anyhow = { version = "1.0.71", optional = true }
async-mutex = { version = "1.4.0", optional = true }



[profile.release]
opt-level = "s"     # Optimize for size over speed
lto = true          # Enable link-time optimizations to shrink binary

["features"]
default = []
interface = ["dep:serde", "dep:serde_json", "dep:reqwest", "dep:anyhow", "dep:async-mutex"]
