[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "chain_gang"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python/src"
module-name = "tx_engine.chain_gang"
sdist-include = ["LICENSE", "python/README.md"]
bindings = "pyo3"
sdist-generator = "cargo"