[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tx_engine"
readme = "README-pypi.md"
description = "This library provides a Python interface for building BitcoinSV scripts and transactions."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["requests==2.34.2", "python-bitcoinrpc==1.0", "cryptography==49.0.0"]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python/src"
module-name = "tx_engine"
sdist-include = ["LICENSE", "README-pypi.md"]
bindings = "pyo3"
sdist-generator = "cargo"
readme = "README-pypi.md"
